--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<div id="bannerDiv">
 		<img id="homepageBanner" src="owl.jpg">
 		<img id="logo" src="penguin.png">
+
 		<h1>Cute animals</h1>	
 	</div>
 
@@ -99,6 +100,18 @@
     </div>
     </div>
 
+    <button type="button" class="btn btn-dark">
+      	<a href="cards.html">
+      		go to p.2
+      	</a>
+      </button>
+
+    <button type="button" class="btn btn-dark">
+      	<a href="Turted titmouse.html">
+      		go to p.3
+      	</a>
+      </button>
+
 	<h2 class="smallHeading">Differnet kinds of birds</h2>
 <div id="listsDiv">
 	<div class="lists">
@@ -138,16 +151,16 @@
 	<div class="lists">
 	<ul>
 		<li>Parrot
-			the warm areas of the Southern Hemisphere
+		  	<br>	the warm areas of the Southern Hemisphere
 		</li>
 		<li>Hawk
-			Central America, the West Indies, and Jamaica
+				<br>Central America, the West Indies, and Jamaica
 		</li>
 		<li>Crane
-			Antarctica and, mysteriously, South America
+				<br>	Antarctica and, mysteriously, South America
 		</li>
 		<li>Red-billed Blue-Magpie
-			Taiwan 
+					<br>Taiwan 
 		</li>
 	</ul>
 </div>
