--- a/Turted titmouse.html
+++ b/Turted titmouse.html
@@ -23,10 +23,111 @@
 	#banner{
 		width: 100%;
 	}
+
+	#textDiv{
+		padding: 3%;
+		font-size: 130%;
+	}
+
+	#logo{
+		width: 80px;
+	}
+
+	.d-block{
+		height: 650px;
+		object-fit: cover;
+		border-radius: 20px;
+	}
+
+	.carousel{
+		margin-bottom: 5%;
+	}
 	</style>
 
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	  <a class="navbar-brand" href="#"><img src="bird.png" id="logo"></a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav mr-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="https://www.youtube.com/watch?v=oX6YxYnoLRg">Link</a>
+	      </li>
+	      <li class="nav-item dropdown">
+	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          Cute Birds
+	        </a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	          <a class="dropdown-item" href="https://www.youtube.com/watch?v=MjEaniGTrx0">name of the others cute bird</a>
+	          <a class="dropdown-item" href="https://www.youtube.com/watch?v=VIg7CDme3kw">Cute birds</a>
+	          <div class="dropdown-divider"></div>
+	          <a class="dropdown-item" href="https://www.youtube.com/watch?v=TFZlogYmx1E">Other bird</a>
+	        </div>
+	      </li>
+	      <li class="nav-item">
+	    </ul>
+	    <form class="form-inline my-2 my-lg-0">
+	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+	    </form>
+	  </div>
+	</nav>
+
 	<img src="bird.jpeg" id="banner">
+
+	<div class="container" id="textDiv">
+		<div class="row">
+			<div class="col">
+				<p>
+					The tufted titmouse (Baeolophus bicolor) is a small songbird from North America, a species in the tit and chickadee family (Paridae). The black-crested titmouse, found from central and southern Texas southward, was included as a subspecies, but now is considered a separate species, (Baeolophus atricristatus).
+				</p>
+
+			</div>
+			
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				  <ol class="carousel-indicators">
+				    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				  </ol>
+				  <div class="carousel-inner">
+				    <div class="carousel-item active">
+				      <img class="d-block w-100" src="hi.jpeg" alt="First slide">
+				    </div>
+				    <div class="carousel-item">
+				      <img class="d-block w-100" src="earth lady.jpg" alt="Second slide">
+				    </div>
+				    <div class="carousel-item">
+				      <img class="d-block w-100" src="earth lady.jpeg" alt="Third slide">
+				    </div>
+				  </div>
+				  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Previous</span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Next</span>
+
+			</div>
+			
+		</div>
+		
+	</div>
+
 </body>
 </html>
